# cctx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
benches/: benchmark_suite.rs  run_benchmark.sh
docs/: BENCHMARKS.md  PROJECT_REFERENCE.md  cctx-compaction-architecture.md
docs/blog/: launch-post.md
scripts/: demo.sh  quality_benchmark.py  record-demo.tape  run_benchmarks.sh
src/: config.rs  lib.rs  main.rs  watch.rs
src/analyzer/: duplication.rs  health.rs  mod.rs
src/compaction/: mod.rs
src/core/: context.rs  tokenizer.rs
src/embeddings/: mod.rs  ollama.rs  openai.rs  tfidf.rs
src/fingerprint/: mod.rs
src/formats/: mod.rs
src/llm/: mod.rs  ollama.rs  openai.rs
src/pipeline/: executor.rs  mod.rs
src/proxy/: config.rs  dashboard.rs  handler.rs  metrics.rs  mod.rs  server.rs  upstream.rs
src/state/: history.rs  mod.rs  store.rs
src/strategies/: bookend.rs  dedup.rs  mod.rs  prune.rs  structural.rs  summarize.rs
src/transcript/: mod.rs  normalizer.rs  parser.rs  schema.rs
tests/: cli_integration.rs  dedup_tests.rs  edge_cases.rs  integration_test.rs  pipeline_tests.rs  prune_tests.rs  test_proxy.sh  transcript_tests.rs
tests/fixtures/: anthropic_conversation.json  bench_agent_history.json  bench_codebase_context.json  bench_long_chat.json  bench_rag_chunks.json  duplicate_heavy_conversation.json  large_conversation.json  rag_chunks.json  raw_document.txt  sample_conversation.json  sample_transcript.jsonl  structured_content.json  technical_conversation.json
