[package]
name = "cctx"
version = "0.1.0"
edition = "2024"

[dependencies]
# ── Core (always compiled) ─────────────────────────────────────────────────

# clap: CLI argument parsing. The "derive" feature lets us define commands
# with plain Rust structs instead of writing builder boilerplate.
clap = { version = "4", features = ["derive"] }

# serde + serde_json: serialization/deserialization. The "derive" feature
# auto-generates JSON parsing code for any struct you annotate with
# #[derive(Deserialize, Serialize)].
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# tiktoken-rs: OpenAI-compatible BPE tokenizer. Lets us count tokens exactly
# the same way GPT-4 / Claude do, so our budget numbers are accurate.
tiktoken-rs = "0.5"

# anyhow: ergonomic error propagation for application code (binaries).
anyhow = "1"

# thiserror: ergonomic custom error types for library code.
thiserror = "1"

# owo-colors: zero-dependency terminal color library.
owo-colors = "4"

# ── Optional proxy dependencies (only compiled with --features proxy) ──────
#
# `optional = true` means the crate is only compiled when a feature that
# lists it (via `dep:crate_name`) is enabled. Without --features proxy,
# cctx is a pure CLI tool with zero network dependencies.

# axum: ergonomic HTTP server built on hyper + tower.
axum = { version = "0.7", optional = true }

# tokio: the async runtime that drives all async/await code.
# "full" includes the multi-threaded scheduler, I/O driver, timers, and sync primitives.
tokio = { version = "1", features = ["full"], optional = true }

# reqwest: high-level async HTTP client for forwarding to the upstream LLM API.
# rustls-tls: pure-Rust TLS — no system OpenSSL dependency.
# stream: enables .bytes_stream() for SSE/streaming response forwarding.
# blocking: enables reqwest::blocking::Client for sync embedding HTTP calls.
# stream: enables .bytes_stream() for SSE/streaming response forwarding.
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "blocking"], default-features = false, optional = true }

# tower: middleware framework. axum is built on tower's Service trait.
tower = { version = "0.5", optional = true }

# tower-http: ready-made middleware layers (CORS, request tracing, etc.)
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }

# ── Feature flags ──────────────────────────────────────────────────────────
#
# Cargo features let you conditionally compile code and dependencies.
# `cargo build` compiles only the core CLI (fast build, no network deps).
# `cargo build --features proxy` adds the HTTP proxy server and client.

[features]
default = []
# Embedding providers (Ollama, OpenAI) for semantic deduplication.
# Adds reqwest::blocking for sync HTTP calls to embedding APIs.
embeddings = ["dep:reqwest"]
# LLM providers (Ollama, OpenAI) for summarization.
# Also uses reqwest::blocking — no tokio needed for CLI usage.
llm = ["dep:reqwest"]
# OpenAI-compatible proxy server with context optimization.
proxy = ["dep:axum", "dep:tokio", "dep:reqwest", "dep:tower", "dep:tower-http"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
